# COGNITRA

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Home - Copy.py  Home.py  ITERATION_LOG.md  ITERATION_LOG_FULL.md  LICENSE  PowerAutomate_prompt.md  README.md  SKILL.md  pyproject.toml  requirements.txt  test_macro_themes.py  test_scenarios.py
.claude/: settings.local.json
.streamlit/: config.toml  secrets.toml.example
Docs/: ITERATION_LOG.md  ITERATION_LOG_FULL.md  Screenshots of iterations.docx  Screenshots_schemas.docx  codebase_issue_tasks.md  technical_report_v1.0.md
References/: QUARTERLY_REVIEW.md  SKILL.md  company-watchlist.md  executive-brief-template.md  topic-taxonomy.md
data/: new_country_mapping.csv  records.jsonl
docs/: BRIEF_DOCX_EXPORT.md  COGNITRA_Technical_Report_202602.docx  COGNITRA_Technical_Report_v5.docx  DUAL_VERSION_STRATEGY.md  ITERATION_LOG.md  ITERATION_LOG_FULL.md  README.md  REUSABILITY_STRATEGY.md  streamlit_page_map.md  technical_report_v1.0.md
pages/: 01_Ingest.py  02_Inbox.py  02_Review.py  02_Review_Approve.py  03_Brief.py  03_Record.py  03_Weekly_Executive_Brief.py  04_Dashboard.py  04_Insights.py  05_Export_Admin.py  05_Weekly_Brief.py  06_Admin.py  06_Review_Brief.py  06_Weekly_Brief.py  07_Documents.py  08_Admin.py  Admin.py
scripts/: dedupe_jsonl.py  demo_clean_chunk.py  demo_dedup.py  fix_renault_date.py  migrate_region_overhaul.py  run_quality.py
spec/: SKILL_final.md  executive-brief-template_final.md
src/: brief_to_docx.py  briefing.py  clean_text.py  constants.py  context_pack.py  dedup_rank.py  dedupe.py  (+12 more)
(+74 files in other folders)
